PAAS-1: Added json response, integrated MailChimp

--- a/templates/pun.html
+++ b/templates/pun.html
@@ -8,7 +8,7 @@
       <div class="container">
          <div id="view-10" view="">
             <div class="hero-unit">
-               <h1>{{pun}}</h1>
+               <h1 id="pun">{{pun}}</h1>
 <!--                <p><em>- Chris</em></p>
  -->            </div>
          </div>
