PAAS-1: Added way of dealing with cus words

--- a/templates/dirty_boy.html
+++ b/templates/dirty_boy.html
@@ -8,7 +8,8 @@
       <div class="container">
          <div id="view-10" view="">
             <div class="hero-unit">
-               <h1 id="pun">{{pun}}</h1>
+               <h1 id="pun">Dirty Boy!</h1>
+                <p><em>Wash your mouth out and have a look at <a id="redirect" href="{{{alt_pun_url}}}"> this pun</a> instead.</em></p>
             </div>
          </div>
       </div>
