PAAS-1: Added Richard's joke

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
          <div id="view-10" view="">
             <div class="hero-unit">
                <h1>Yes we have no {{subject}}...</h1>
-               ...but we will make one based pun for you.
+               ...but we will make one for you.
             </div>
          </div>
         <div>
