PAAS-3: Gave credit where credit's due

--- a/templates/pun.html
+++ b/templates/pun.html
@@ -9,6 +9,7 @@
          <div id="view-10" view="">
             <div class="hero-unit">
                <h1 id="pun">{{pun}}</h1>
+                <p><em><span id="attrib">{{attrib}}</span></em></p>
             </div>
          </div>
       </div>
